US942 fixed datepicker dropdown being cut off of screen

--- a/app/scss/dashboard/_dashboard.scss
+++ b/app/scss/dashboard/_dashboard.scss
@@ -23,6 +23,13 @@ $chartIconsSpriteRetinaURL: url(../../assets/images/charts/sprite-buttons-chart-
         }
     }
 
+    .selectboxit-options
+    {
+        height: 250px;
+        overflow-y: scroll;
+        @include nice-scrollbar; 
+    }
+
     /*
     .selectboxit-option
     {
